--- a/Mail/TemporadaUpdated.html
+++ b/Mail/TemporadaUpdated.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+            img {
+                width: 300px;
+            }
+    </style>
 </head>
 <body>
     <h1>
@@ -17,5 +22,9 @@
         </span>
 
         <p>Gracias por preferirnos.</p>
+
+        <a href="http://localhost:5173/serie/@serieName/season/@numTemp">Ver @serieName Aqui</a>
+
+        <img src="@imgURL" alt="@serieName">
 </body>
 </html>
