--- a/Mail/WelcomeTemplate.html
+++ b/Mail/WelcomeTemplate.html
@@ -12,6 +12,8 @@
 
     <p>Le estaremos enviando actualizaciones de las series que le gusten.</p>
 
+    <p>Gracias por preferirnos.</p>
 
+    <a href="https://0zb51pw0-5173.use2.devtunnels.ms/">Ver Tus series y peliculas favoritas Aqui</a>
 </body>
 </html>
