Update front-end URL

--- a/Mail/WelcomeTemplate.html
+++ b/Mail/WelcomeTemplate.html
@@ -14,6 +14,6 @@
 
     <p>Gracias por preferirnos.</p>
 
-    <a href="https://0zb51pw0-5173.use2.devtunnels.ms/">Ver Tus series y peliculas favoritas Aqui</a>
+    <a href="https://reelsynth.netlify.app/">Ver Tus series y peliculas favoritas Aqui</a>
 </body>
 </html>
