--- a/Mail/SerieUpdated.html
+++ b/Mail/SerieUpdated.html
@@ -25,7 +25,7 @@
 
     <p>Gracias por preferirnos.</p>
 
-    <a href="https://0zb51pw0-5173.use2.devtunnels.ms/serie/@serieName">Ver @serieName Aqui</a>
+    <a href="https://reelsynth.netlify.app/#//serie/@serieName">Ver @serieName Aqui</a>
 
     <img src="@imgURL" alt="@serieName">
 </body>
