--- a/Mail/TemporadaUpdated.html
+++ b/Mail/TemporadaUpdated.html
@@ -23,7 +23,7 @@
 
         <p>Gracias por preferirnos.</p>
 
-        <a href="https://reelsynth.netlify.app/#//serie/@serieName/season/@numTemp">Ver @serieName Aqui</a>
+        <a href="https://reelsynth.netlify.app/#/serie/@serieName/season/@numTemp">Ver @serieName Aqui</a>
 
         <img src="@imgURL" alt="@serieName">
 </body>
